--- a/_config.yml
+++ b/_config.yml
@@ -303,8 +303,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["ML", "MLLM & LLM", "STAT", "ENG", "CHN", "Others"] # these tags will be displayed on the front page of your blog
+display_categories: ["Note", "Memo"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
